Fixed the spacing below the 'reveal new updates' button

--- a/app/client/stylesheets/components/compositions/pu-composition-partupdetailupdates.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-partupdetailupdates.sass
@@ -57,8 +57,6 @@
             margin-bottom: 50px - 3px
 
     .pu-sub-revealupdatesbutton
-        margin-bottom: -18px
-
         aside
             height: 1px
 
